# File-encrypter

./: Cargo.toml  README.md
src/: main.rs
src/encryption/: aes_256_algo.rs  mod.rs  rsa_algo.rs
