[package]
name = "file_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = "0.5.0"
rand = "0.8"
aes = "0.7"          # Or the latest version
block-modes = "0.8"  # Or the latest version
block-padding = "0.2" # For padding
clap = { version = "4.0", features = ["derive", "cargo"] }
hex = "0.4"
